# daily

./: .gitignore  Cargo.toml  lifetrack-spec.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  id.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: node.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/index/: Cargo.toml  README.md
crates/index/src/: indexer.rs  lib.rs  node_index.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage_sqlite/: Cargo.toml
crates/storage_sqlite/src/: lib.rs
docs/storage-markdown/: spec.md
