[package]
name = "storage_sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
domain = { path = "../domain" }
storage = { path = "../storage" }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
